# useless

./: Dockerfile  pyproject.toml  requirements.txt
app/: main.py
app/chains/: __init__.py  api_answer_chain.py  data_extraction_chain.py  data_summarization_chain.py  extraction_chain.py  query_generation_chain.py  schema_generation_chain.py  sql_query_chain.py
app/models/: __init__.py  api_answer_model.py  data_extraction_model.py  data_summarization_model.py  extraction_model.py  query_generation_model.py  schema_generation_model.py  sql_query_model.py
app/prompts/: __init__.py  api_answer_prompt.py  data_extraction_prompt.py  data_summarization_prompt.py  extraction_prompt.py  query_generation_prompt.py
