[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["VivyLabs <vivylabs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
langchain = "^0.1.17"
langchain-groq = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
